--- a/notebooks/optimization-algorithms.ipynb
+++ b/notebooks/optimization-algorithms.ipynb
@@ -8003,73 +8003,118 @@
    "source": [
     "#### Lagrangian\n",
     "\n",
-    "Convex constraints can be added via the Lagrangian.\n",
-    "\n",
-    "##### Core Idea\n",
-    "The **Lagrangian** simplifies constrained optimization by combining the objective and constraints into one function.\n",
-    "\n",
-    "**Analogy:** A **ball** (solution) rolls inside a **box** (constraints).  \n",
-    "The walls push back (via multipliers) when the ball hits them — at equilibrium, forces balance.\n",
+    "##### Core idea\n",
+    "Turn a constrained problem into an unconstrained-looking one by **adding constraints to the objective with nonnegative weights** (Lagrange multipliers).  \n",
+    "At the optimum, constraints that “matter” get nonzero weight; constraints with slack get weight 0.\n",
     "\n",
     "##### Formulation\n",
-    "\n",
     "Original problem:\n",
     "$$\n",
-    "\\min_x f(x) \\quad \\text{s.t. } c_i(x) \\le 0, \\; i=1,...,n\n",
+    "\\min_x f(x)\\quad \\text{s.t. } c_i(x)\\le 0,\\; i=1,\\dots,n\n",
     "$$\n",
     "\n",
     "Lagrangian:\n",
     "$$\n",
-    "L(x, \\alpha) = f(x) + \\sum_i \\alpha_i c_i(x), \\quad \\alpha_i \\ge 0\n",
+    "L(x,\\alpha)=f(x)+\\sum_{i=1}^n \\alpha_i\\,c_i(x),\\qquad \\alpha_i\\ge 0\n",
     "$$\n",
     "\n",
-    "We find $(x^*, \\alpha^*)$ satisfying the **KKT conditions**:\n",
-    "\n",
+    "##### KKT conditions (optimality conditions)\n",
+    "Find $(x^*,\\alpha^*)$ such that:\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\nabla_x L(x, \\alpha) = 0 & \\text{(stationarity)} \\\\\n",
-    "c_i(x) \\le 0 & \\text{(primal feasibility)} \\\\\n",
-    "\\alpha_i \\ge 0 & \\text{(dual feasibility)} \\\\\n",
-    "\\alpha_i c_i(x) = 0 & \\text{(complementary slackness)}\n",
+    "\\nabla_x L(x^*,\\alpha^*)=0 & \\text{(stationarity)}\\\\\n",
+    "c_i(x^*)\\le 0 & \\text{(primal feasibility)}\\\\\n",
+    "\\alpha_i^*\\ge 0 & \\text{(dual feasibility)}\\\\\n",
+    "\\alpha_i^*\\,c_i(x^*)=0 & \\text{(complementary slackness)}\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "##### Active vs Inactive Constraints\n",
+    "##### Active vs. inactive constraints\n",
+    "- **Active:** $c_i(x^*)=0$ (constraint is tight) ⇒ may have $\\alpha_i^*>0$.\n",
+    "- **Inactive:** $c_i(x^*)<0$ (slack) ⇒ must have $\\alpha_i^*=0$.\n",
     "\n",
-    "| Type | Condition | Effect |\n",
-    "|------|------------|---------|\n",
-    "| **Active** | $c_i(x) = 0$ | Constraint directly affects solution |\n",
-    "| **Inactive** | $c_i(x) < 0$ | Constraint has no effect ($\\alpha_i = 0$) |\n",
-    "\n",
-    "**Example:**  \n",
-    "- $x \\ge 0$, solution $x=0$ → active.  \n",
-    "- $x \\ge 0$, solution $x=2$ → inactive.\n",
-    "\n",
-    "##### Saddle Point Formulation\n",
-    "\n",
-    "We look for a **saddle point**:\n",
+    "##### Saddle-point view (common in convex optimization)\n",
     "$$\n",
-    "\\max_{\\alpha \\ge 0} \\; \\min_x L(x, \\alpha)\n",
+    "\\max_{\\alpha\\ge 0}\\;\\min_x\\; L(x,\\alpha)\n",
     "$$\n",
-    "- Minimize w.r.t. $x$ → satisfy constraints.  \n",
-    "- Maximize w.r.t. $\\alpha$ → enforce constraints.\n",
+    "Min over $x$ chooses the best solution for fixed penalties; max over $\\alpha$ increases penalties to enforce constraints.\n",
     "\n",
-    "At equilibrium, the objective and constraints balance.\n",
+    "##### Typical solving workflow\n",
+    "1. Write $L(x,\\alpha)$  \n",
+    "2. Apply stationarity: $\\nabla f(x)+\\sum_i \\alpha_i\\nabla c_i(x)=0$  \n",
+    "3. Add feasibility + complementary slackness + $\\alpha_i\\ge 0$  \n",
+    "4. Solve for $(x^*,\\alpha^*)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12118c00",
+   "metadata": {},
+   "source": [
+    "#### Why KKT Conditions Are Equivalent to the Original Problem\n",
     "\n",
-    "##### Solving Step-by-Step\n",
+    "For constrained optimization, the Karush–Kuhn–Tucker (KKT) conditions provide a way to characterize optimal solutions. Under suitable assumptions, solving the KKT system is **equivalent** to solving the original optimization problem.\n",
     "\n",
-    "1. **Write Lagrangian:** $L(x, \\alpha) = f(x) + \\sum_i \\alpha_i c_i(x)$  \n",
-    "2. **Stationarity:** $\\nabla f(x) + \\sum_i \\alpha_i \\nabla c_i(x) = 0$  \n",
-    "3. **Feasibility:** $c_i(x) \\le 0$  \n",
-    "4. **Complementary Slackness:** $\\alpha_i c_i(x) = 0$  \n",
-    "5. **Dual Feasibility:** $\\alpha_i \\ge 0$  \n",
-    "6. **Solve $(x, \\alpha)$:** combine equations to find $(x^*, \\alpha^*)$ minimizing $f(x)$.\n",
+    "##### Step 1: Why KKT Conditions Are **Necessary**\n",
     "\n",
-    "##### Summary\n",
+    "Consider the constrained optimization problem:\n",
+    "$\\min_x f(x) \\quad \\text{s.t. } c_i(x) \\le 0.$\n",
     "\n",
-    "- The Lagrangian converts constraints into forces.  \n",
-    "- **Lagrange multipliers** act as pressure enforcing constraints.  \n",
-    "- The optimal $(x^*, \\alpha^*)$ is a **saddle point** of $L(x, \\alpha)$ — minimum in $x$, maximum in $\\alpha$.\n"
+    "Assume $x^*$ is an optimal solution.\n",
+    "\n",
+    "At $x^*$:\n",
+    "- Any direction that decreases $f$ must violate at least one constraint.\n",
+    "- Therefore, the gradient $\\nabla f(x^*)$ cannot point into any feasible descent direction.\n",
+    "\n",
+    "This implies that the gradient of the objective must lie in the cone generated by the gradients of the **active constraints**:\n",
+    "$\\nabla f(x^*) = -\\sum_i \\alpha_i^* \\nabla c_i(x^*), \\quad \\alpha_i^* \\ge 0.$\n",
+    "\n",
+    "This gives the **stationarity condition**:\n",
+    "$\\nabla_x L(x^*, \\alpha^*) = 0,$\n",
+    "where the Lagrangian is $L(x, \\alpha) = f(x) + \\sum_i \\alpha_i c_i(x).$\n",
+    "\n",
+    "The remaining KKT conditions follow directly from optimality:\n",
+    "- **Primal feasibility**: $c_i(x^*) \\le 0$\n",
+    "- **Dual feasibility**: $\\alpha_i^* \\ge 0$\n",
+    "- **Complementary slackness**: $\\alpha_i^* c_i(x^*) = 0$\n",
+    "\n",
+    "Thus: $\\text{Optimal solution} \\;\\Rightarrow\\; \\text{KKT conditions hold}.$\n",
+    "\n",
+    "This necessity result is very general.\n",
+    "\n",
+    "##### Step 2: Why KKT Conditions Are **Sufficient** (Convex Case)\n",
+    "\n",
+    "Now assume:\n",
+    "- $f(x)$ is convex\n",
+    "- Each $c_i(x)$ is convex\n",
+    "- A constraint qualification holds (e.g., Slater’s condition)\n",
+    "\n",
+    "Suppose $(x^*, \\alpha^*)$ satisfies the KKT conditions.\n",
+    "\n",
+    "From **stationarity**:\n",
+    "$\\nabla f(x^*) + \\sum_i \\alpha_i^* \\nabla c_i(x^*) = 0.$\n",
+    "\n",
+    "By convexity of $f$:\n",
+    "$f(x) \\ge f(x^*) + \\nabla f(x^*)^\\top (x - x^*), \\quad \\forall x.$\n",
+    "\n",
+    "Substituting the stationarity condition and using feasibility and complementary slackness:\n",
+    "$f(x) \\ge f(x^*) \\quad \\forall x \\text{ feasible}.$\n",
+    "\n",
+    "Therefore, $x^*$ is a **global minimizer** of the original problem.\n",
+    "\n",
+    "Hence:\n",
+    "$\\text{KKT conditions hold} \\;\\Rightarrow\\; \\text{Optimal solution}.$\n",
+    "\n",
+    "##### Conclusion\n",
+    "\n",
+    "For convex optimization problems satisfying a constraint qualification:\n",
+    "$$\n",
+    "x^* \\text{ solves the original problem}\n",
+    "\\quad \\Longleftrightarrow \\quad\n",
+    "\\exists \\alpha^* \\text{ such that } (x^*, \\alpha^*) \\text{ satisfy KKT}.\n",
+    "$$\n",
+    "\n",
+    "In this setting, the KKT conditions are both **necessary and sufficient**, making them equivalent to the original optimization problem."
    ]
   },
   {
