--- a/notebooks/16_natural-language-processing-applications.ipynb
+++ b/notebooks/16_natural-language-processing-applications.ipynb
@@ -4136,7 +4136,19 @@
    "source": [
     "#### Fine-Tuning BERT\n",
     "\n",
-    "fine-tune a pretrained BERT model for the Natural Language Inference (NLI) task, using it as a **sequence-level text pair classification model**.\n",
+    "This section explains how to **fine-tune a pretrained BERT model** for the **Natural Language Inference (NLI)** task, using it as a **sequence-level text pair classification model**.\n",
+    "\n",
+    "##### Task Definition: Natural Language Inference (NLI)\n",
+    "\n",
+    "- Input: a **pair of sentences**\n",
+    "  - **Premise**\n",
+    "  - **Hypothesis**\n",
+    "- Output: one of three labels:\n",
+    "  - **Entailment** — the hypothesis logically follows from the premise\n",
+    "  - **Contradiction** — the hypothesis contradicts the premise\n",
+    "  - **Neutral** — neither entailment nor contradiction\n",
+    "\n",
+    "NLI is treated as a **text pair classification** problem.\n",
     "\n",
     "##### BERT Fine-Tuning Setup\n",
     "\n",
@@ -4199,10 +4211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d2l.DATA_HUB['bert.base'] = (d2l.DATA_URL + 'bert.base.torch.zip',\n",
-    "                             '225d66f04cae318b841a13d32af3acc165f253ac')\n",
-    "d2l.DATA_HUB['bert.small'] = (d2l.DATA_URL + 'bert.small.torch.zip',\n",
-    "                              'c72329e68a732bef0452e4b96a1c341c8910f81f')"
+    "d2l.DATA_HUB['bert.base'] = (d2l.DATA_URL + 'bert.base.torch.zip', '225d66f04cae318b841a13d32af3acc165f253ac')\n",
+    "d2l.DATA_HUB['bert.small'] = (d2l.DATA_URL + 'bert.small.torch.zip', 'c72329e68a732bef0452e4b96a1c341c8910f81f')"
    ]
   },
   {
