--- a/notebooks/17_reinforcement_learning.ipynb
+++ b/notebooks/17_reinforcement_learning.ipynb
@@ -312,6 +312,7 @@
     "\n",
     "$\\{(s^i_t,a^i_t,r^i_t,s^i_{t+1}) \\}_{i=1..n, t=0..T-1}$\n",
     "\n",
+    "Note: the agent does NOT know the reward function in advance, but it DOES observe rewards when interacting with the environment.\n",
     "We can frame Q-Learning as minimizing the **temporal-difference error** over this dataset:\n",
     "\n",
     "$$\n",
